# obd_brz_gauge

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.ws175  sdkconfig.ws175
main/: CMakeLists.txt  Kconfig.projbuild  README.md  app_bootstrap.c  app_bootstrap.h  app_bootstrap.md  app_lvgl_port.c  app_lvgl_port.h  app_lvgl_port.md  app_main.c  app_main.md  idf_component.yml  python_quick_rs485_check.py  python_test.py
main/app_obd_dsp/: README.md  aux_sensor_demand.c  aux_sensor_demand.h  aux_sensor_demand.md  aux_sensor_demand_logic.h  default_page_ids.h  lvgl_buffer_profile.h  lvgl_perf_trace.h  obd_data_cache.c  obd_data_cache.h  obd_data_cache.md  obd_poll_schedule_logic.h  ui_gforce_plot_logic.c  ui_gforce_plot_logic.h  ui_metric_layout_logic.c  ui_metric_layout_logic.h  vehicle_profiles.c  vehicle_profiles.h  vehicle_profiles.md  zc6_gear_monitor_decode.h  zc6_gforce_decode.h  zc6_gforce_monitor_decode.h  zc6_oil_can_monitor_decode.h  zc6_tpms_monitor_decode.h
main/bsp_obd_dsp/: README.md  ads1115_oil_pressure.c  ads1115_oil_pressure.h  ads1115_oil_pressure.md  ble_scan_buffer_profile.h  bsp_board.md  elm327_ble_client.c  elm327_ble_client.h  elm327_ble_client.md  nvs_error_log_logic.h  nvs_storage.c  nvs_storage.h  nvs_storage.md  qmi8658_gforce.c  qmi8658_gforce.h  qmi8658_gforce.md  racechrono_ble_diy.c  racechrono_ble_diy.h  racechrono_ble_diy.md  rs485_brake_temp.c  rs485_brake_temp.h  rs485_brake_temp.md
main/bsp_obd_dsp/boards/: README.md  board_api.h  board_dispatch.c  board_runtime_touch.h  board_ws_175_amoled.c  board_ws_175_amoled.md  board_ws_175_amoled_spec.h  board_ws_185.c  board_ws_185.md  board_ws_185_spec.h
main/bsp_obd_dsp/exio/: README.md  TCA9554PWR.md
main/bsp_obd_dsp/i2c_driver/: I2C_Driver.md  README.md
main/bsp_obd_dsp/lcd_driver/: README.md  ST77916.c  ST77916.md
main/bsp_obd_dsp/touch_driver/: CST816.c  CST816.h  (+2 more)
main/export_path/: CMakeLists.txt  README.md  filelist.txt  ui.c  ui.h  ui.md  ui_dashboard_config.c  ui_dashboard_config.h  ui_debug_config.h  ui_font_profile.c  ui_font_profile.h  ui_helpers.c  ui_helpers.h  ui_home_pager.c  ui_home_pager.h  ui_home_runtime.c  ui_home_runtime.h  ui_home_runtime.md  ui_home_runtime_widgets.c  ui_home_runtime_widgets.h  ui_home_runtime_widgets.md  ui_layout.h  ui_legacy_runtime.c  ui_platform.c  ui_platform.h  ui_round_shell.c  ui_round_shell.h  ui_runtime_common.h
(+112 files in other folders)
